--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "EnProgress App back-end built in Node.js and Express.",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
   },
   "repository": {
