--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ image: $DOCKER_IMAGE:latest
 
 stages:
   - build_docker_image
-#  - vm_deploy
+  - vm_deploy
   - heroku_deploy
 
 variables:
@@ -15,15 +15,15 @@ build_docker_image_job:
     - docker build -t $DOCKER_IMAGE .
     - docker push $DOCKER_IMAGE
 
-#vm_deploy_job:
-#  stage: vm_deploy
-#  script:
-#    - npm i express
-#    - npm i pg
-#    - if screen -ls | grep "EnProgress" ; then screen -XS EnProgress quit ; fi
-#    - screen -S EnProgress -dm node app.js
-#  rules:
-#    - when: manual
+vm_deploy_job:
+  stage: vm_deploy
+  script:
+    - npm i express
+    - npm i pg
+    - if screen -ls | grep "EnProgress" ; then screen -XS EnProgress quit ; fi
+    - screen -S EnProgress -dm node app.js
+  rules:
+    - when: manual
 
 heroku_deploy_job:
   stage: heroku_deploy
