--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "enprogress-backend",
   "version": "1.0.0",
   "description": "EnProgress App back-end built in Node.js and Express.",
-  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
   },
   "repository": {
     "type": "git",
@@ -14,7 +13,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1",
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "express": "~4.16.1",
+    "morgan": "~1.9.1",
     "pg": "^8.2.1"
   }
 }
