--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,8 +18,7 @@ build_docker_image_job:
 vm_deploy_job:
   stage: vm_deploy
   script:
-    - npm i express
-    - npm i pg
+    - npm i 
     - if screen -ls | grep "EnProgress" ; then screen -XS EnProgress quit ; fi
     - screen -S EnProgress -dm node app.js
 
