--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "EnProgress App back-end built in Node.js and Express.",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "mocha --timeout 10000"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,9 @@
     "joi": "^14.3.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "mocha": "7.2.0",
+    "chai": "4.2.0",
+    "chai-http": "4.3.0"
   }
 }
