--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "morgan": "~1.9.1",
     "mocha": "7.2.0",
     "chai": "4.2.0",
-    "chai-http": "4.3.0"
+    "chai-http": "4.3.0",
+    "dotenv-safe": "8.2.0"
   }
 }
